--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 group=com.collokia
 version=1.0.0
 
-kotlinVersion=1.0.6
+kotlinVersion=1.1.1
 scalaVersion=2.11
 
 util_version=0.1.8.4
@@ -11,6 +11,8 @@ version_collokia_data=1.17.0-SNAPSHOT
 versionDynamoHack=1.0
 
 corenlpVersion = 3.5.2
+
+smileVersion = 1.3.0
 
 versionElasticSearch=5.1.1
 versionElasticSearchMR=5.1.1
